# snap-vault-cli

./: README.md  pyproject.toml
restored-old/: notes.txt
snap_vault/: __init__.py  __main__.py  cli.py  core.py  display.py  manifest.py
test-vault2/.snapvault/: config.json
test-vault2/.snapvault/manifests/: 20260626_013826_802.json  20260626_014030_196.json
