[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-vault-cli"
version = "0.1.0"
description = "Incremental smart backup CLI with content-addressed object storage"
authors = [{name = "Abdul Rehman", email = "abdulrehmanrajax@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["backup", "snapshot", "incremental", "cli", "devtools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.scripts]
snap-vault = "snap_vault.cli:main"

[tool.setuptools.packages.find]
include = ["snap_vault*"]
